test/compile-fail/resolution/type-existence/type-alias-trait-not-type/expected.txt
error: expected type, found trait `X`
  ┌─ ./test/compile-fail/resolution/type-existence/type-alias-trait-not-type/top.rhdl:2:10
  │
2 │ type a = X;
  │          ^ not a type

